@@ -1,3 +1,8 @@
+2005-06-03  Joel Brobecker  <brobecker@adacore.com>
+
+	* symmisc.c (dump_symtab_1): Renamed from dump_symtab.
+	(dump_symtab): New function.
+
 2005-04-02  Joel Brobecker  <brobecker@adacore.com>
 
 	* exceptions.h: Include ui-out.h.
